// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoMatch mount correctly snapshot 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(NoMatch)
    location={
      Object {
        "pathname": "/404",
      }
    }
  >
    <NoMatch
      dispatch={[Function]}
      getList={[Function]}
      location={
        Object {
          "pathname": "/404",
        }
      }
      title="404"
      updateTitle={[Function]}
    >
      <div
        className="noMatch"
      >
        <h2>
          404
        </h2>
        <img
          alt="404"
          className="img-2q9nM"
          onClick={[Function]}
          src="hehe.png"
        />
        <h3>
          No match for 
          <code>
            /404
          </code>
        </h3>
      </div>
    </NoMatch>
  </Connect(NoMatch)>
</Provider>
`;

exports[`NoMatch renders correctly snapshot 1`] = `
<div
  class="noMatch"
>
  <h2>
    404
  </h2>
  <img
    alt="404"
    class="img-2q9nM"
    src="hehe.png"
  />
  <h3>
    No match for 
    <code>
      /404
    </code>
  </h3>
</div>
`;
